--- a/elements/GrappleHookHitsAnything.mod.json
+++ b/elements/GrappleHookHitsAnything.mod.json
@@ -2,6 +2,6 @@
   "_fv": 24,
   "_type": "procedure",
   "definition": {
-    "procedurexml": "<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"event_trigger\" deletable=\"false\" x=\"40\" y=\"40\"><field name=\"trigger\">no_ext_trigger</field><next><block type=\"move_entity\"><value name=\"entity\"><block type=\"entity_from_deps\"></block></value><value name=\"x\"><block type=\"coord_x\"></block></value><value name=\"y\"><block type=\"coord_y\"></block></value><value name=\"z\"><block type=\"coord_z\"></block></value></block></next></block></xml>"
+    "procedurexml": "<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"event_trigger\" deletable=\"false\" x=\"40\" y=\"40\"><field name=\"trigger\">no_ext_trigger</field><next><block type=\"wait\"><value name=\"ticks\"><block type=\"math_number\"><field name=\"NUM\">20</field></block></value><statement name=\"do\"><block type=\"entity_set_movement\"><value name=\"entity\"><block type=\"entity_from_deps\"></block></value><value name=\"vx\"><block type=\"entity_vel_x\"><value name=\"entity\"><block type=\"immediate_source_entity_from_deps\"></block></value></block></value><value name=\"vy\"><block type=\"entity_vel_y\"><value name=\"entity\"><block type=\"immediate_source_entity_from_deps\"></block></value></block></value><value name=\"vz\"><block type=\"entity_vel_z\"><value name=\"entity\"><block type=\"immediate_source_entity_from_deps\"></block></value></block></value></block></statement></block></next></block></xml>"
   }
 }
