--- a/elements/TreeSwingerProjectileHitsBlock.mod.json
+++ b/elements/TreeSwingerProjectileHitsBlock.mod.json
@@ -2,6 +2,6 @@
   "_fv": 24,
   "_type": "procedure",
   "definition": {
-    "procedurexml": "<xml xmlns=\"https://developers.google.com/blockly/xml\"><variables><variable type=\"Number\" id=\"currentblockz\">currentblockz</variable></variables><block type=\"event_trigger\" deletable=\"false\" x=\"114\" y=\"67\"><field name=\"trigger\">no_ext_trigger</field><next><block type=\"variables_set_number\"><mutation xmlns=\"http://www.w3.org/1999/xhtml\" is_player_var=\"false\" has_entity=\"false\"></mutation><field name=\"VAR\">local:currentblockz</field><value name=\"VAL\"><block type=\"coord_y\"></block></value><next><block type=\"block_add\"><value name=\"block\"><block type=\"mcitem_allblocks\"><field name=\"value\">CUSTOM:ReinforcedVine</field></block></value><value name=\"x\"><block type=\"coord_x\"></block></value><value name=\"y\"><block type=\"coord_y\"></block></value><value name=\"z\"><block type=\"coord_z\"></block></value></block></next></block></next></block></xml>"
+    "procedurexml": "<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"event_trigger\" deletable=\"false\" x=\"399\" y=\"144\"><field name=\"trigger\">no_ext_trigger</field><next><block type=\"block_add\"><value name=\"block\"><block type=\"mcitem_allblocks\"><field name=\"value\">CUSTOM:ReinforcedVine</field></block></value><value name=\"x\"><block type=\"block_pos_x\"></block></value><value name=\"y\"><block type=\"block_pos_y\"></block></value><value name=\"z\"><block type=\"block_pos_z\"></block></value></block></next></block></xml>"
   }
 }
